Modified scripts to use "postinstall" for tsc

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node dist/src/index.js",
     "dev": "nodemon src/index.ts",
     "test": "jest",
-    "prod": "npm install && npm run build && npm start"
+    "tsc": "tsc",
+    "postinstall": "npm run tsc"
   },
   "jest": {
     "testPathIgnorePatterns": [
